--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eslint-plugin-einride",
+  "name": "@einride/eslint-config",
   "version": "0.0.0",
-  "description": "Einride Eslint rules",
+  "description": "Einride's ESLint config",
   "author": "Pontus Persson",
   "main": "lib/index.js",
   "private": true,
