chore: set dummy version number to signal it's not to be touched
Version in package.json will be updated before publishing to npm, but won't be reflected in repo.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@einride/eslint-plugin",
-  "version": "0.0.0",
+  "version": "0.0.0-development",
   "description": "Einride's ESLint configuration as a sharable plugin",
   "author": "Pontus Persson",
   "main": "lib/index.js",
