fix: update package json keyword

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "keywords": [
     "eslint",
     "eslintplugin",
-    "plugin",
+    "eslint-plugin",
     "react",
     "typescript",
     "einride",
