--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.1",
     "eslint-plugin-react": "7.25.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "prettier": "2.3.2"
+    "eslint-plugin-react-hooks": "4.2.0"
   },
   "peerDependencies": {
-    "eslint": ">=7.0.0"
+    "eslint": ">=7.0.0",
+    "prettier": ">=2.0.0"
   },
   "keywords": [
     "eslint",
