--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "index.js"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "4.30.0",
-    "@typescript-eslint/parser": "4.30.0",
+    "@typescript-eslint/eslint-plugin": "5.0.0",
+    "@typescript-eslint/parser": "5.0.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.3.0",
-    "eslint-plugin-import": "2.24.2",
-    "eslint-plugin-jest": "24.4.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jest": "25.0.5",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.25.1",
+    "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0"
   },
   "peerDependencies": {
     "eslint": ">=7.28.0",
-    "prettier": ">=2.0.0"
+    "prettier": "^2.4.1"
   },
   "keywords": [
     "eslint",
