chore: migrate from tools CI setup to npm scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Review & release
 
 on:
   push:
@@ -6,34 +6,39 @@ on:
       - main
 
 jobs:
-  make:
+  review:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Setup Node
-        uses: actions/setup-node@v2.1.4
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: 16
 
-      - name: Make
-        run: make
+      - name: Review
+        run: yarn review
 
   release:
-    needs: make
+    needs: review
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - name: Setup Node
-        uses: actions/setup-node@v2.1.4
+        uses: actions/setup-node@v2
         with:
-          node-version: 12
+          node-version: 16
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Run semantic-release
-        run: make semantic-release
+        run: yarn semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
