--- a/package.json
+++ b/package.json
@@ -39,11 +39,11 @@
     "index.js"
   ],
   "engines": {
-    "node": "16"
+    "node": "14 || 16"
   },
   "keywords": [
     "eslint",
-    "eslintplugin",
+    "plugin",
     "eslint-plugin",
     "react",
     "typescript",
