--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "16.0.0",
+    "@types/node": "17.0.8",
     "commitlint": "16.0.1",
+    "eslint": "8.6.0",
     "prettier": "2.5.1",
     "semantic-release": "18.0.1"
   },
