--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,6 +4,10 @@ updates:
   - package-ecosystem: npm
     directory: /
     schedule:
-      interval: weekly
+      interval: daily
     allow:
-      - dependency-type: "development"
+      - dependency-type: development
+  - package-ecosystem: github-actions
+    directory: /
+    schedule:
+      interval: daily
