--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "@commitlint/config-conventional": "16.0.0",
+    "@einride/prettier-config": "1.2.0",
     "@types/node": "16.11.21",
     "commitlint": "16.0.2",
     "eslint": "8.7.0",
