--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,13 @@
-name: Review & release
+name: CI
 
 on:
   push:
     branches:
       - main
-
-permissions: write-all
+      - beta
+      - alpha
+      - next
+      - next-major
 
 jobs:
   review:
@@ -27,6 +29,8 @@ jobs:
   release:
     needs: review
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
