chore: update readme

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@einride/eslint-plugin",
   "version": "0.0.0-development",
-  "description": "Einride's ESLint configuration as a sharable plugin",
+  "description": "Einride's default ESLint config",
   "scripts": {
     "commitlint": "commitlint --from origin/main --to HEAD",
     "git-verify-nodiff": "./scripts/git-verify-nodiff.bash",
