--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@einride/eslint-plugin",
-  "version": "0.0.0-development",
+  "version": "4.9.0",
   "description": "Einride's default ESLint config",
   "scripts": {
     "commitlint": "commitlint --from origin/main --to HEAD",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@commitlint/config-conventional": "16.2.1",
     "@einride/prettier-config": "1.2.0",
+    "@semantic-release/git": "10.0.1",
     "@types/node": "16.11.26",
     "commitlint": "16.2.3",
     "eslint": "8.11.0",
