--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,9 +57,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Fetch lastest
-        run: git pull
-
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -67,11 +64,14 @@ jobs:
           registry-url: https://npm.pkg.github.com
           scope: "@einride"
 
-      - name: Install dependencies
-        run: yarn install --frozen-lockfile
+      - name: Fetch semantic release commit from publish-npm job
+        run: git pull
 
       - name: Setup registry
         run: echo @einride:registry=https://npm.pkg.github.com >> .npmrc
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Publish to GPR
         run: npm publish
