--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,12 @@ updates:
     directory: /
     schedule:
       interval: daily
+      time: "05:00"
     allow:
       - dependency-type: development
-    ignore:
-      - dependency-name: "@types/node"
-        update-types: ["version-update:semver-major"]
+
   - package-ecosystem: github-actions
     directory: /
     schedule:
       interval: daily
+      time: "05:00"
