chore: use @commitlint/cli instead of commitlint for consistency

--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "eslint-plugin-react-hooks": "4.4.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "16.2.3",
     "@commitlint/config-conventional": "16.2.1",
     "@einride/prettier-config": "1.2.0",
-    "commitlint": "16.2.3",
     "eslint": "8.13.0",
     "prettier": "2.6.2",
     "semantic-release": "19.0.2"
