fix: publish with provenance
https://github.blog/2023-04-19-introducing-npm-package-provenance/

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "url": "https://github.com/einride/eslint-plugin.git"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "provenance": true
   }
 }
