--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     permissions:
+      contents: write # to create release
       id-token: write # to publish with provenance
     steps:
       - name: Checkout
