--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "review": "yarn install --frozen-lockfile && yarn commitlint && yarn format-check"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "5.59.6",
-    "@typescript-eslint/parser": "5.59.6",
+    "@typescript-eslint/eslint-plugin": "5.61.0",
+    "@typescript-eslint/parser": "5.61.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-deprecation": "1.4.1",
@@ -30,7 +30,7 @@
   },
   "peerDependencies": {
     "eslint": ">=8.0.0",
-    "prettier": "^2.4.1"
+    "prettier": ">=2.4.1"
   },
   "files": [
     "index.js"
