--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-deprecation": "1.4.1",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-prettier": "5.0.0-alpha.2",
+    "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0"
   },
@@ -30,7 +30,7 @@
   },
   "peerDependencies": {
     "eslint": ">=8.0.0",
-    "prettier": ">=2.4.1"
+    "prettier": ">=3.0.0"
   },
   "files": [
     "index.js"
