--- a/.backstage/component-eslint-plugin.yaml
+++ b/.backstage/component-eslint-plugin.yaml
@@ -2,11 +2,12 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: eslint-plugin
-  description: Einride's default ESLint config
+  description: Einride's default ESLint config.
   annotations:
+    backstage.io/source-location: url:https://github.com/einride/eslint-plugin/tree/main
     github.com/project-slug: einride/eslint-plugin
-    github.com/team-slug: einride/team-design-system
+    github.com/team-slug: einride/team-divops
 spec:
   type: library
   lifecycle: production
-  owner: team-design-system
+  owner: team-divops
