--- a/.backstage/component-eslint-plugin.yaml
+++ b/.backstage/component-eslint-plugin.yaml
@@ -6,9 +6,9 @@ metadata:
   description: Einride's default ESLint config.
   annotations:
     backstage.io/source-location: url:https://github.com/einride/eslint-plugin/tree/main
-    github.com/project-slug: einride/eslint-plugin
+    github.com/project-slug: einride/platform-engineering
     github.com/team-slug: einride/team-divops
 spec:
   type: library
-  owner: team-divops
+  owner: platform-engineering
   lifecycle: production
